Actualizada la versión de PHP requerida y mejorada la gestión de cookies en el controlador. Se añadieron nuevas traducciones y se realizaron ajustes en el archivo de instalación.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
     "accept": "Acceptar",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
     "browse": "Examinar",
+    "browser": "Navegador",
     "business-name": "Raó Social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -221,7 +223,9 @@
     "category": "Categoria",
     "cc": "CC",
     "center": "Centre",
+    "certificate": "Certificat",
     "change": "Canviar",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
     "charge-date": "Data càrrec",
     "chart": "Gràfic",
@@ -539,6 +543,7 @@
     "end-date": "Data de finalització",
     "end-month": "Mes de fi",
     "end-time": "Hora de finalització",
+    "environment": "Entorno",
     "epigraph": "Epígraf",
     "epigraph-group": "Grup d'epígraf",
     "epigraphs": "Epígrafs",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Error a la vista %viewName%. Cal informar el 'name' en qualcuna columna de l'xml",
     "error-on-xml-file": "Error en arxiu XML %fileName%",
     "error-processing-xmlview": "S'ha produït un error al processar la vista XML, el fitxer '%fileName%' no existeix o no és correcte",
+    "error-read-cert": "Error en llegir el certificat",
     "error-reading-file": "Error al llegir el fitxer '%fileName%'",
     "error-saving-lines": "Error en guardar les línies",
     "error-saving-stock": "Error al desar l'estoc!",
     "error-to-innodb": "S'ha produït un error al convertir la taula a InnoDB.",
     "error-updating-product-stock": "Error en actualitzar l'estoc del producte!",
+    "error-write-cert": "Error en escriure el certificat",
     "errors": "Errades",
     "es_EC": "Espanyol (Ecuador)",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informació d'Estat",
     "initial-number": "Número inicial",
     "insert-update": "Afegir o modificar",
+    "installation": "Instalación",
     "installed": "instal·lat",
     "installed-plugins": "Instal·lats",
     "installer": "Instal·lador",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Llicència",
     "like-than": "Igual que",
+    "limits": "Límites",
     "line": "Línia",
     "lines": "Línies",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Següent",
     "nick": "Sobrenom",
     "no": "No",
+    "no-admin": "No administrador",
     "no-data": "No hi ha dades",
     "no-data-received-form": "Cap dada rebuda per formulari",
     "no-document-selected": "No s'ha seleccionat cap document",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Cap forat trobat",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha import pendent",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No teniu permís per imprimir o exportar",
     "no-reference": "Sense referència",
     "no-selected-item": "Cap element seleccionat",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "No hi ha prou estoc de %reference%",
     "not-passed-integrity-check": "Alguns arxius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir més detalls aquí<\/a>.",
     "not-public": "No públic",
+    "not-registered": "No registrada",
     "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
@@ -1363,6 +1375,7 @@
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Seleccionar",
     "select-all": "Seleccionar tot",
     "select-content-for": "Selecciona contingut per a %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Sèrie RB",
     "series": "Sèries",
     "server": "Servidor",
+    "server-software": "Software del servidor",
     "service": "Servei",
     "services": "Serveis",
     "settings": "Ajustaments",
     "settlement": "liquidació",
     "settlement-product": "Producte de liquidació",
     "settlements": "liquidacions",
+    "setup-manually": "Configuración manual",
     "setup-options": "Opcions de configuració",
     "shipping": "Envio",
     "shipping-address": "Adreça d'enviament",
@@ -1428,11 +1443,12 @@
     "simplified": "Simplificada",
     "size": "Mida",
     "sketch": "Esbós",
-    "sketch-invoice-warning": "Aquesta factura encara és un esbós. Feu-la oficial canviat el seu estat a emesa.",
+    "sketch-invoice-warning": "Aquesta factura encara és un esbós. Feu-la oficial canviant el seu estat a emesa.",
     "small": "Petit",
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "L'extensió SOAP no està activada al PHP. Contacta amb el teu proveïdor de hosting per activar-la.",
     "social-security-number": "Nombre Seguretat Social",
+    "software": "Software",
     "sort": "Ordre",
     "sort-by-column": "Ordenar per columna",
     "sort-by-date-asc": "Ordenar per data desc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regularització d'IVA",
     "vehicle": "Vehicle",
     "verified": "Verificat",
+    "verify": "Verificar",
     "version": "Versió",
     "video": "Vídeo",
     "vies-check-success": "El número '%vat-*number%' està registrat en el sistema VIES",
