--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "abgekürz",
     "about": "Über",
     "accept": "akzeptieren",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Karton richtig geschlossen",
     "boxes": "Boxen",
     "browse": "Durchsuchen",
+    "browser": "Browser",
     "business-name": "Firmenname",
     "buy": "Kaufen",
     "cache": "Cache-Speicher",
@@ -221,7 +223,9 @@
     "category": "Kategorie",
     "cc": "CC",
     "center": "Mitte",
+    "certificate": "Zertifikat",
     "change": "Veränderung",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Kanal",
     "charge-date": "Belastungsdatum",
     "chart": "Grafik",
@@ -539,6 +543,7 @@
     "end-date": "Endtermin",
     "end-month": "Endmonat",
     "end-time": "Endzeit",
+    "environment": "Entorno",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph-Gruppe",
     "epigraphs": "Inschriften",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Fehler beim Testen der Ansicht %viewName%. Keine 'name'-Spalte in XML",
     "error-on-xml-file": "Fehler in der XML-Datei %fileName%",
     "error-processing-xmlview": "Fehler beim Verarbeiten der XML-Ansicht, Datei '0' existiert nicht oder ist nicht korrekt",
+    "error-read-cert": "Fehler beim Lesen des Zertifikats",
     "error-reading-file": "Fehler beim Lesen der Datei %1$s",
     "error-saving-lines": "Fehler beim Speichern der Zeilen",
     "error-saving-stock": "¡Fehler beim Speichern des Bestandes!",
     "error-to-innodb": "Konnte die Tabelle in InnoDB konvertieren.",
     "error-updating-product-stock": "Fehler beim Aktualisieren des Produktbestands!",
+    "error-write-cert": "Fehler beim Schreiben des Zertifikats",
     "errors": "Fehler",
     "es_EC": "es_EC",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Statusinformation",
     "initial-number": "Anfangsnummer",
     "insert-update": "Einfügen oder aktualisieren",
+    "installation": "Instalación",
     "installed": "installiert",
     "installed-plugins": "Installierte Plugins",
     "installer": "FacturaScripts 2018 (Alpha) Installationsprogramm",
@@ -895,6 +903,7 @@
     "library": "Bibliotek",
     "license": "Licencia",
     "like-than": "Wie als",
+    "limits": "Límites",
     "line": "Linie",
     "lines": "Linien",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Nächster",
     "nick": "Kerbe",
     "no": "nicht",
+    "no-admin": "No administrador",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
     "no-document-selected": "Es wurde kein Dokument ausgewählt.",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Keine Lücken gefunden",
     "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Sie haben keine Berechtigung zum Drucken oder Exportieren.",
     "no-reference": "Keine Referenz",
     "no-selected-item": "Keine Elemente ausgewählt",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
+    "not-registered": "No registrada",
     "not-sent": "Nicht gesendet",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Ungültige E-Mail %email%",
@@ -1363,6 +1375,7 @@
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
     "second-trimester": "Zweites Trimester",
+    "security-warning": "Aviso de seguridad",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
     "select-content-for": "Wählen Sie Inhalt für %content% aus.",
@@ -1401,12 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Serie",
     "server": "Server:",
+    "server-software": "Software del servidor",
     "service": "Dienstleistung",
     "services": "Dienstleistungen",
     "settings": "Einstellungen",
     "settlement": "Abwicklung",
     "settlement-product": "Abrechnungsprodukt",
     "settlements": "Abrechnungen",
+    "setup-manually": "Configuración manual",
     "setup-options": "Einrichtungsoptionen",
     "shipping": "Versand",
     "shipping-address": "Lieferanschrift",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Kleiner als",
     "soap-extension-not-installed": "Die SOAP-Erweiterung ist in PHP nicht aktiviert. Bitte wenden Sie sich an Ihren Hosting-Anbieter, um sie zu aktivieren.",
     "social-security-number": "Sozialversicherungsnummer",
+    "software": "Software",
     "sort": "Reihenfolge",
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Zwei-Faktor-Authentifizierung aktivieren",
     "type": "Typ",
     "type-alert": "Typwarnung",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "MwSt Regulierung",
     "vehicle": "Fahrzeug",
     "verified": "geprüft",
+    "verify": "Verificar",
     "version": "Version",
     "video": "Video",
     "vies-check-success": "Die Nummer '%vat-number%' ist im VIES-System registriert",
