--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abbreviated",
     "about": "About",
     "accept": "Accept",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Box closed ok",
     "boxes": "Boxes",
     "browse": "Search",
+    "browser": "Browser",
     "business-name": "Business name",
     "buy": "Buy",
     "cache": "Cache",
@@ -221,7 +223,9 @@
     "category": "Category",
     "cc": "CC",
     "center": "Center",
+    "certificate": "Certificate",
     "change": "Change",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Channel",
     "charge-date": "Charge date",
     "chart": "Chart",
@@ -539,6 +543,7 @@
     "end-date": "End date",
     "end-month": "End month",
     "end-time": "End time",
+    "environment": "Entorno",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph group",
     "epigraphs": "Epigraphs",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Error processing XML View, file '%fileName%' not exist or is incorrect",
+    "error-read-cert": "Error reading certificate",
     "error-reading-file": "Error reading file '%fileName%'",
     "error-saving-lines": "Error saving lines",
     "error-saving-stock": "¡Error saving stock!",
     "error-to-innodb": "Error converting table to InnoDB.",
     "error-updating-product-stock": "¡Error updating product stock!",
+    "error-write-cert": "Error writing certificate",
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Status Information",
     "initial-number": "Initial number",
     "insert-update": "Add or modify",
+    "installation": "Instalación",
     "installed": "Installed",
     "installed-plugins": "Installed",
     "installer": "Installer",
@@ -895,6 +903,7 @@
     "library": "Library",
     "license": "License",
     "like-than": "Like than",
+    "limits": "Límites",
     "line": "Line",
     "lines": "Lines",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Next",
     "nick": "Nick",
     "no": "No",
+    "no-admin": "No administrador",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "No document has been selected",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "No gaps found",
     "no-invoice": "No invoice",
     "no-outstanding-amount": "There is no outstanding amount",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "You do not have permission to print or export",
     "no-reference": "No reference",
     "no-selected-item": "No selected item",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Not Public",
+    "not-registered": "No registrada",
     "not-sent": "Not sent",
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
@@ -1363,6 +1375,7 @@
     "second-hand": "Second hand",
     "second-quarter": "2nd Quarter",
     "second-trimester": "Second trimester",
+    "security-warning": "Aviso de seguridad",
     "select": "Select",
     "select-all": "Select all",
     "select-content-for": "Select content for %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Server",
+    "server-software": "Software del servidor",
     "service": "Service",
     "services": "Services",
     "settings": "Settings",
     "settlement": "Settlement",
     "settlement-product": "Settlement product",
     "settlements": "Settlements",
+    "setup-manually": "Configuración manual",
     "setup-options": "Setup options",
     "shipping": "Shipping",
     "shipping-address": "Shipping address",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Smaller than",
     "soap-extension-not-installed": "The SOAP extension is not enabled in PHP. Contact your hosting provider to activate it.",
     "social-security-number": "Social Security number",
+    "software": "Software",
     "sort": "Order",
     "sort-by-column": "Sort by column",
     "sort-by-date-asc": "Sort by date asc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
     "two-factor-auth": "2-step authentication",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
     "type-alert": "Type alert",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "VAT Regularization",
     "vehicle": "Vehicle",
     "verified": "Verified",
+    "verify": "Verificar",
     "version": "Version",
     "video": "Video",
     "vies-check-success": "Number '%vat-number%' is registered in VIES system",
