--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
     "accept": "Aceptar",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
     "browse": "Examinar",
+    "browser": "Navegador",
     "business-name": "Razón Social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -221,7 +223,9 @@
     "category": "Categoría",
     "cc": "CC",
     "center": "Centro",
+    "certificate": "Certificado",
     "change": "Cambiar",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
@@ -539,6 +543,7 @@
     "end-date": "Fecha de fin",
     "end-month": "Mes de fin",
     "end-time": "Hora finalización",
+    "environment": "Entorno",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epígrafes",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Error en archivo XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
+    "error-read-cert": "Error al leer el certificado",
     "error-reading-file": "Error al leer el archivo '%fileName%'",
     "error-saving-lines": "Error al guardar las líneas",
     "error-saving-stock": "¡Error al guardar el stock!",
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
+    "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Información de Estado",
     "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
+    "installation": "Instalación",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Licencia",
     "like-than": "Igual que",
+    "limits": "Límites",
     "line": "Línea",
     "lines": "Líneas",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Siguiente",
     "nick": "Apodo",
     "no": "No",
+    "no-admin": "No administrador",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "No se ha seleccionado ningún documento",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "Ningún elemento seleccionado",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "No público",
+    "not-registered": "No registrada",
     "not-sent": "No enviado",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Email %email% no válido",
@@ -1363,6 +1375,7 @@
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-content-for": "Selecciona contenido para %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
+    "server-software": "Software del servidor",
     "service": "Servicio",
     "services": "Servicios",
     "settings": "Ajustes",
     "settlement": "Liquidación",
     "settlement-product": "Producto de liquidación",
     "settlements": "Liquidaciones",
+    "setup-manually": "Configuración manual",
     "setup-options": "Ajustar opciones",
     "shipping": "Envío",
     "shipping-address": "Dirección de envío",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Número De Seguro Social",
+    "software": "Software",
     "sort": "Orden",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha asc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regularización de IVA",
     "vehicle": "Vehículo",
     "verified": "Verificado",
+    "verify": "Verificar",
     "version": "Versión",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
