--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Laburtua",
     "about": "Honi buruz",
     "accept": "Onartu",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Kutxa ondo itxita",
     "boxes": "Kutxak",
     "browse": "Lanatu",
+    "browser": "Nabigatzailea",
     "business-name": "Enpresaren izena",
     "buy": "Erosi",
     "cache": "Cache",
@@ -221,7 +223,9 @@
     "category": "Kategoria",
     "cc": "CC",
     "center": "Erdian",
+    "certificate": "Ziurtagiria",
     "change": "Aldatu",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Kanala",
     "charge-date": "Kobratzeko data",
     "chart": "Grafikoa",
@@ -539,6 +543,7 @@
     "end-date": "Amaiera data",
     "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
+    "environment": "Entorno",
     "epigraph": "Epigrafea",
     "epigraph-group": "Epigrafe taldea",
     "epigraphs": "Epigrafeak",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Errore bat dago %viewName% ikuspegian. Xml-an zutabe baten 'name' jakinaraztea falta da",
     "error-on-xml-file": "Errore bat dago %fileName% XML artxiboan",
     "error-processing-xmlview": "Errore bat gertatu XML ikuspegia prozesatzean, '%fileName%' artxiboa ez da existitzen edo ez da zuzena",
+    "error-read-cert": "Errore bat gertatu da ziurtagiria irakurtzean",
     "error-reading-file": "Errore bat gertatu da '%fileName%' artxiboa irakurtzean",
     "error-saving-lines": "Errore bat gertatu da lerroak gordetzean",
     "error-saving-stock": "Errore bat geratu da stocka gordetzean!",
     "error-to-innodb": "Errore bat gertatu da taula InnoDBra bihurtzean.",
     "error-updating-product-stock": "Errore bat gertatu da artikuluaren stocka eguneratzean!",
+    "error-write-cert": "Errore bat gertatu da ziurtagiria idaztean",
     "errors": "Erroreak",
     "es_EC": "Espainiako gaztelania (Ekuador)",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Egoera informazioa",
     "initial-number": "Hasierako zenbakia",
     "insert-update": "Gehitu edo aldatu",
+    "installation": "Instalación",
     "installed": "Instalatua",
     "installed-plugins": "Instalatuak",
     "installer": "Instalatzailea",
@@ -895,6 +903,7 @@
     "library": "Liburutegia",
     "license": "Lizentzia",
     "like-than": "Honen berdina",
+    "limits": "Límites",
     "line": "Lerroa",
     "lines": "Lerroak",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Hurrengoa",
     "nick": "Goitizena",
     "no": "Ez",
+    "no-admin": "No administrador",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
     "no-document-selected": "Ez da dokumenturik hautatu",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Ez da hutsunerik aurkitu",
     "no-invoice": "Fakturarik gabe",
     "no-outstanding-amount": "Ez dago zenbatekorik zain",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
     "no-reference": "Erreferentziarik gabe",
     "no-selected-item": "Ez da elementurik aukeratu",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "%reference% artikuluaren stock nahikoa ez dago",
     "not-passed-integrity-check": "Fitxategi batzuk ez dute gainditu integritate egiaztapena ...  <br\/>Hemen <a class='alert-link' target='_blank' href='IntegritySystemCheck'> begiratu xehetasunak<\/a>.",
     "not-public": "Ez da publikoa",
+    "not-registered": "No registrada",
     "not-sent": "Ez da bidalia",
     "not-stored-content": "Ezin da edukia biltegi egin",
     "not-valid-email": "%email% eposta baliogabea",
@@ -1363,6 +1375,7 @@
     "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
     "second-trimester": "Bigarren hiruhilekoa",
+    "security-warning": "Aviso de seguridad",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
     "select-content-for": "%content%-erako eduki hautatu",
@@ -1401,12 +1414,14 @@
     "serierb": "RB seriea",
     "series": "Serieak",
     "server": "Zerbitzaria",
+    "server-software": "Software del servidor",
     "service": "Zerbitzua",
     "services": "Zerbitzuak",
     "settings": "Ezarpenak",
     "settlement": "Likidazioa",
     "settlement-product": "Likidazio produktua",
     "settlements": "Likidazioak",
+    "setup-manually": "Configuración manual",
     "setup-options": "Konfigurazio aukerak",
     "shipping": "Bidalketa",
     "shipping-address": "Bidaltzeko helbidea",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Baino txikiagoa",
     "soap-extension-not-installed": "SOAP luzapena ez dago gaituta PHPn. Jarri harremanetan zure hosting hornitzailerarekin gaitzeko.",
     "social-security-number": "Gizarte segurantza zenbakia",
+    "software": "Software",
     "sort": "Ordena",
     "sort-by-column": "Zutabean sailkatu",
     "sort-by-date-asc": "Ordenar por fecha asc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
     "two-factor-auth": "Bi faktoreren autentifikazioa",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Bi pausoetako autentifikazioa aktibatu",
     "type": "Mota",
     "type-alert": "Alerta mota",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "BEZ erregularizazioa",
     "vehicle": "Ibilgailua",
     "verified": "Egiaztatua",
+    "verify": "Verificar",
     "version": "Bertsioa",
     "video": "Bideoa",
     "vies-check-success": "'%vat-number%' zenbakia VIES sistemaren erregistroan dago",
