--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "abrégé",
     "about": "Sur",
     "accept": "Accepter",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Boîte fermée correctement",
     "boxes": "Boîtes",
     "browse": "Parcourir",
+    "browser": "Navigateur",
     "business-name": "Nom de l'entreprise",
     "buy": "Acheter",
     "cache": "Cache",
@@ -221,7 +223,9 @@
     "category": "Categoria",
     "cc": "CC",
     "center": "Centre",
+    "certificate": "Certificat",
     "change": "Changer",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "canal",
     "charge-date": "Date de facturation",
     "chart": "Graphique",
@@ -539,6 +543,7 @@
     "end-date": "Date de fin",
     "end-month": "Mois de fin",
     "end-time": "Heure de fin",
+    "environment": "Entorno",
     "epigraph": "Épigraphe",
     "epigraph-group": "Groupe épigraphique",
     "epigraphs": "Épigraphes",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Erreur dans %viewName% view. Manquant d'informer le 'nom' dans une colonne du xml",
     "error-on-xml-file": "Le fichier XML %fileName% a provoqué une erreur",
     "error-processing-xmlview": "Erreur lors du traitement de XML View, le fichier '%fileName%' n'existe pas ou est incorrect",
+    "error-read-cert": "Erreur lors de la lecture du certificat",
     "error-reading-file": "Erreur de lecture du fichier '%fileName%'",
     "error-saving-lines": "Erreur lors de la sauvegarde des lignes",
     "error-saving-stock": "Erreur lors de l'enregistrement du stock!",
     "error-to-innodb": "Erreur lors de la conversion de la table pour InnoDB.",
     "error-updating-product-stock": "Erreur lors de la mise à jour du stock !",
+    "error-write-cert": "Erreur lors de l'écriture du certificat",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informations d'état",
     "initial-number": "Numéro initial",
     "insert-update": "Ajouter ou modifier",
+    "installation": "Instalación",
     "installed": "Installé",
     "installed-plugins": "Installé",
     "installer": "Installateur FacturaScripts 2018 (Alpha)",
@@ -895,6 +903,7 @@
     "library": "Bibliothèque",
     "license": "Licence",
     "like-than": "Comme",
+    "limits": "Límites",
     "line": "Ligne",
     "lines": "Lignes",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Prochain",
     "nick": "Nick",
     "no": "Non",
+    "no-admin": "No administrador",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
     "no-document-selected": "Aucun document sélectionné",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
     "no-outstanding-amount": "Il n'y a pas de montant impayé",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Pas de référence",
     "no-selected-item": "Aucun élément sélectionné",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Stock insuffisant pour %reference%",
     "not-passed-integrity-check": "Certains fichiers n'ont pas passé le test d'intégrité...<br\\\/>Vous pouvez <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir plus de détails ici<\/a>.",
     "not-public": "Non public",
+    "not-registered": "No registrada",
     "not-sent": "Non envoyé",
     "not-stored-content": "Contenu non stocké",
     "not-valid-email": "Adresse e-mail incorrecte %email%",
@@ -1363,6 +1375,7 @@
     "second-hand": "Seconde main",
     "second-quarter": "2ème trimestre",
     "second-trimester": "Second trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Sélectionner",
     "select-all": "Tout sélectionner",
     "select-content-for": "Sélectionnez le contenu pour %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
+    "server-software": "Software del servidor",
     "service": "Service",
     "services": "Services",
     "settings": "Ajustes",
     "settlement": "Règlement",
     "settlement-product": "settlement-product",
     "settlements": "Règlements",
+    "setup-manually": "Configuración manual",
     "setup-options": "Options de configuration",
     "shipping": "Livraison",
     "shipping-address": "Adresse de livraison",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Plus petit que",
     "soap-extension-not-installed": "L'extension SOAP n'est pas activée dans PHP. Contactez votre hébergeur pour l'activer.",
     "social-security-number": "Numéro de sécurité sociale",
+    "software": "Logiciel",
     "sort": "Commande",
     "sort-by-column": "Tri par colonne",
     "sort-by-date-asc": "Trier par date décroissante.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
     "two-factor-auth": "Authentification à deux facteurs",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Régularisation de la TVA",
     "vehicle": "Véhicule",
     "verified": "vérifié",
+    "verify": "Verificar",
     "version": "Version",
     "video": "Vidéo",
     "vies-check-success": "Le numéro \"%vat-number%\" est enregistré dans le système VIES.",
