--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
     "accept": "Aceptar",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Caixa pechada correctamente",
     "boxes": "Cajas",
     "browse": "Examinar",
+    "browser": "Navegador",
     "business-name": "Razón social",
     "buy": "Mercar",
     "cache": "Caché",
@@ -221,7 +223,9 @@
     "category": "Categoría",
     "cc": "CC",
     "center": "Centro",
+    "certificate": "Certificado",
     "change": "Cambiar",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
     "charge-date": "Data cargo",
     "chart": "Gráfico",
@@ -539,6 +543,7 @@
     "end-date": "Data de finalización",
     "end-month": "Mes de fin",
     "end-time": "Hora de remate",
+    "environment": "Entorno",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de epígrafos",
     "epigraphs": "Epígrafos",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Error na vista %viewName%. Falta informar el 'name' nalgunha columna do xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro procesando o XML da vista, o ficheiro '%fileName%' non existe ou é incorrecto",
+    "error-read-cert": "Erro ao ler o certificado",
     "error-reading-file": "Error ao ler o arquivo '%fileName%'",
     "error-saving-lines": "Erro ao gardar as liñas",
     "error-saving-stock": "Erro ao gardar o stock!",
     "error-to-innodb": "Error oa convertir a táboa a InnoDB.",
     "error-updating-product-stock": "Erro ao actualizar o stock do produto!",
+    "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Información de estado",
     "initial-number": "Número inicial",
     "insert-update": "Engadir ou modificar",
+    "installation": "Instalación",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador de FacturaScripts",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Licencia",
     "like-than": "Do mesmo xeito que",
+    "limits": "Límites",
     "line": "Liña",
     "lines": "Liñas",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Seguinte",
     "nick": "Apodo",
     "no": "Non",
+    "no-admin": "No administrador",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "Non se seleccionou ningún documento",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Ningún oco atopado",
     "no-invoice": "Sen factura",
     "no-outstanding-amount": "Non hai importe pendente",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
     "no-reference": "Sen referencia",
     "no-selected-item": "Ningún elemento seleccionado",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Non hai suficientes existencias de %reference%",
     "not-passed-integrity-check": "Algúns arquivos non pasaron a verificación de integridade ... <br\/>Podes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter máis detalles aquí<\/a>.",
     "not-public": "Non público",
+    "not-registered": "No registrada",
     "not-sent": "Non enviado",
     "not-stored-content": "Contido non almacenado",
     "not-valid-email": "Email %email% non válido",
@@ -1363,6 +1375,7 @@
     "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-content-for": "Selecciona contido para %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
+    "server-software": "Software del servidor",
     "service": "Servizo",
     "services": "Servizos",
     "settings": "Axustes",
     "settlement": "Liquidación",
     "settlement-product": "Produto de liquidación",
     "settlements": "Liquidacións",
+    "setup-manually": "Configuración manual",
     "setup-options": "Opcións de configuración",
     "shipping": "Evío",
     "shipping-address": "Dirección de envío",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Máis pequena que",
     "soap-extension-not-installed": "A extensión SOAP non está activada en PHP. Contacta co teu provedor de hosting para activala.",
     "social-security-number": "Número Seguridade Social",
+    "software": "Software",
     "sort": "Orde",
     "sort-by-column": "Ordear por columna",
     "sort-by-date-asc": "Ordear por data asc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
     "two-factor-auth": "Autenticación en dous pasos",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar a autenticación en dous pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regularización de Impostos",
     "vehicle": "Vehículo",
     "verified": "verificado",
+    "verify": "Verificar",
     "version": "Versión",
     "video": "Vídeo",
     "vies-check-success": "O múmero '%vat-number%' está rexistrado no sistema VIES",
