--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "abbreviazione",
     "about": "Di",
     "accept": "accettare",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Scatola chiusa correttamente",
     "boxes": "Scatole",
     "browse": "Navigare",
+    "browser": "Browser",
     "business-name": "Nome commerciale",
     "buy": "comprare",
     "cache": "nascondiglio",
@@ -221,7 +223,9 @@
     "category": "Categoria",
     "cc": "CC",
     "center": "Centro",
+    "certificate": "Certificato",
     "change": "cambiamento",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "canale",
     "charge-date": "Data del addebito",
     "chart": "Grafico",
@@ -539,6 +543,7 @@
     "end-date": "Data di fine",
     "end-month": "Mese di fine",
     "end-time": "tempo finale",
+    "environment": "Entorno",
     "epigraph": "Epigrafe",
     "epigraph-group": "Gruppo epigrafico",
     "epigraphs": "Le epigrafi",
@@ -550,15 +555,17 @@
     "error-checking-vat-number": "Errore nel verificare il numero '%vat-number%' nel sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "Errore nella cancellazione delle righe",
-    "error-generating-qr-code": "Non è stato possibile generare il QR: %message%, %url%",
+    "error-generating-qr-code": "Impossibile generare il QR: %message%, %url%",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Errore nel file XML %fileName%",
     "error-processing-xmlview": "Errore nell'elaborazione della vista XML, il file '0' non esiste o non è corretto",
+    "error-read-cert": "Errore nella lettura del certificato",
     "error-reading-file": "Errore durante la lettura del file% 1 $ s",
     "error-saving-lines": "Errore nel salvataggio delle righe",
     "error-saving-stock": "¡Errore durante il salvataggio delle scorte!",
     "error-to-innodb": "Impossibile convertire la tabella di InnoDB.",
     "error-updating-product-stock": "Errore durante l'aggiornamento dello stock prodotti!",
+    "error-write-cert": "Errore durante la scrittura del certificato",
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informazioni di Stato",
     "initial-number": "numero iniziale",
     "insert-update": "Inserisci o aggiorna",
+    "installation": "Instalación",
     "installed": "Installato",
     "installed-plugins": "Plugin installati",
     "installer": "Installer",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Licenza",
     "like-than": "Mi piace",
+    "limits": "Límites",
     "line": "Linea",
     "lines": "Linee",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Il prossimo",
     "nick": "tacca",
     "no": "non",
+    "no-admin": "No administrador",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
     "no-document-selected": "Nessun documento selezionato",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "Nessuna fattura",
     "no-outstanding-amount": "nessuna somma in sospeso",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Senza riferimento",
     "no-selected-item": "Nessun elemento selezionato",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Non abbastanza stock di %reference%",
     "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
     "not-public": "Non pubblico",
+    "not-registered": "No registrada",
     "not-sent": "Non spedito",
     "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Email non valida %email%",
@@ -1363,6 +1375,7 @@
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
     "second-trimester": "Secondo trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Seleziona",
     "select-all": "Seleziona tutto",
     "select-content-for": "Seleziona contenuto per %content%",
@@ -1374,7 +1387,7 @@
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Invia audio",
-    "send-code-totp": "Inviare codice TOTP",
+    "send-code-totp": "Invia codice TOTP",
     "send-documents": "Inviare documenti",
     "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
@@ -1401,12 +1414,14 @@
     "serierb": "Serie RB",
     "series": "serie",
     "server": "Server",
+    "server-software": "Software del servidor",
     "service": "Servizio",
     "services": "servizi",
     "settings": "Impostazioni",
     "settlement": "Liquidazione",
     "settlement-product": "Prodotto di liquidazione",
     "settlements": "regolamenti",
+    "setup-manually": "Configuración manual",
     "setup-options": "Opzioni di installazione",
     "shipping": "Spedizione",
     "shipping-address": "Indirizzo di spedizione",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Più piccolo di",
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
     "social-security-number": "Numero di previdenza sociale",
+    "software": "Software",
     "sort": "Ordinare",
     "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordina per data disc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
     "two-factor-auth": "Autenticazione a due fattori",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regolarizzazione IVA",
     "vehicle": "Veicolo",
     "verified": "Verificato",
+    "verify": "Verificar",
     "version": "versione",
     "video": "Video",
     "vies-check-success": "Il numero '%vat-number%' è registrato nel sistema VIES",
