--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Skrócony",
     "about": "O nas",
     "accept": "Zaakceptować",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
     "boxes": "Pudełka",
     "browse": "Examinar",
+    "browser": "Nawigacja",
     "business-name": "Nazwa firmy",
     "buy": "Kupować",
     "cache": "Pamięć podręczna",
@@ -221,7 +223,9 @@
     "category": "Kategoria",
     "cc": "CC",
     "center": "Centrum",
+    "certificate": "Certyfikat",
     "change": "Zmień",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Kanał",
     "charge-date": "Data obciążenia",
     "chart": "Wykres",
@@ -539,6 +543,7 @@
     "end-date": "Data zakończenia",
     "end-month": "Miesiąc zakończenia",
     "end-time": "Czas zakończenia",
+    "environment": "Entorno",
     "epigraph": "Epigraf",
     "epigraph-group": "Grupa epigrafu",
     "epigraphs": "Epigrafy",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Błąd przetwarzania XML widoku, plik '%fileName%' nie istnieje lub jest źle sformułowany",
+    "error-read-cert": "Error al leer el certificado",
     "error-reading-file": "Błąd podczas odczytu pliku '%fileName%'",
     "error-saving-lines": "Bład podczas zapisywania linii",
     "error-saving-stock": "Błąd podczas zapisywania zapasów!",
     "error-to-innodb": "Błąd podczas konwersji tabeli do InnoDB.",
     "error-updating-product-stock": "Błąd podczas aktualizacji stanu magazynowego produktu!",
+    "error-write-cert": "Error al escribir el certificado",
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informacja o stanie",
     "initial-number": "Numer początkowy",
     "insert-update": "Dodaj lub zmodyfikuj",
+    "installation": "Instalación",
     "installed": "Zainstalowane",
     "installed-plugins": "Zainstalowane",
     "installer": "Instalador",
@@ -895,6 +903,7 @@
     "library": "Biblioteka",
     "license": "Licencja",
     "like-than": "Tak jak",
+    "limits": "Límites",
     "line": "Linia",
     "lines": "Linie",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Następny",
     "nick": "Nick",
     "no": "Nie",
+    "no-admin": "No administrador",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
     "no-document-selected": "Nie wybrano żadnego dokumentu",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
     "no-outstanding-amount": "Nie ma zaległej kwoty",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Nie ma wystarczającej ilości zapasów %reference%",
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
+    "not-registered": "No registrada",
     "not-sent": "No enviado",
     "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% jest nieprawidłowy",
@@ -1363,6 +1375,7 @@
     "second-hand": "Używane",
     "second-quarter": "2 kwartał",
     "second-trimester": "Drugi trymestr",
+    "security-warning": "Aviso de seguridad",
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
     "select-content-for": "Wybierz zawartość dla %content%",
@@ -1374,7 +1387,7 @@
     "send": "Wysłać",
     "send-anonymous-data": "Wyślij dane anonimowe",
     "send-audios": "Enviar audios",
-    "send-code-totp": "Enviar código TOTP",
+    "send-code-totp": "Wyślij kod TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Wyślij faktury",
@@ -1401,12 +1414,14 @@
     "serierb": "Seria RB",
     "series": "Serie",
     "server": "Serwer",
+    "server-software": "Software del servidor",
     "service": "Usługa",
     "services": "Usługi",
     "settings": "Ustawienia",
     "settlement": "Rozliczenie",
     "settlement-product": "Produkt rozliczeniowy",
     "settlements": "Rozliczenia",
+    "setup-manually": "Configuración manual",
     "setup-options": "Konfiguracja opcji",
     "shipping": "Wysyłka",
     "shipping-address": "Adres dostawy",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Mniejsze niż",
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
     "social-security-number": "Numer ubezpieczenia społecznego",
+    "software": "Oprogramowanie",
     "sort": "Sortowanie",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regulacja VAT",
     "vehicle": "Pojazd",
     "verified": "Zweryfikowany",
+    "verify": "Verificar",
     "version": "Wersja",
     "video": "Video",
     "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
