--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Sobre",
     "accept": "Aceitar",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Caixas",
     "browse": "Navegar",
+    "browser": "Navegador",
     "business-name": "Nome da empresa",
     "buy": "Comprar",
     "cache": "Cache",
@@ -221,7 +223,9 @@
     "category": "Categoria",
     "cc": "CC",
     "center": "Centro",
+    "certificate": "Certificado",
     "change": "mudança",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
     "charge-date": "Data de cobrança",
     "chart": "Gráfico",
@@ -539,6 +543,7 @@
     "end-date": "Data final",
     "end-month": "Fim de mês",
     "end-time": "Hora de finalização",
+    "environment": "Entorno",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo Epígrafe",
     "epigraphs": "Epígrafes",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
+    "error-read-cert": "Erro ao ler o certificado",
     "error-reading-file": "Erro ao ler o arquivo '0'",
     "error-saving-lines": "Erro ao salvar as linhas",
     "error-saving-stock": "¡Erro ao economizar estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
+    "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
     "es-tax-exception-e1": "E",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informação de Estado",
     "initial-number": "Número inicial",
     "insert-update": "Adicionar ou modificar",
+    "installation": "Instalación",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
+    "limits": "Límites",
     "line": "Linha",
     "lines": "Linhas",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Próximo",
     "nick": "usuario",
     "no": "Não",
+    "no-admin": "No administrador",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-document-selected": "Nenhum documento foi selecionado",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
     "no-outstanding-amount": "Não há valor pendente",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "Não há stock suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
+    "not-registered": "No registrada",
     "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1363,6 +1375,7 @@
     "second-hand": "Em segunda mão",
     "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-content-for": "Selecione conteúdo para %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
+    "server-software": "Software del servidor",
     "service": "Serviço",
     "services": "Serviços",
     "settings": "Configurações",
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "Liquidações",
+    "setup-manually": "Configuración manual",
     "setup-options": "Opções de configuração",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Número de Segurança Social",
+    "software": "Software",
     "sort": "Ordenar",
     "sort-by-column": "Ordenar por coluna",
     "sort-by-date-asc": "Ordenar por data asc.",
@@ -1600,6 +1616,10 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 passos",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Ativar autenticação em 2 passos",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regularização de IVA",
     "vehicle": "Veículo",
     "verified": "verificado",
+    "verify": "Verificar",
     "version": "Versão",
     "video": "Vídeo",
     "vies-check-success": "O número '%vat-number%' está registado no sistema VIES",
