--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1,4 +1,5 @@
 {
+    "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
     "accept": "Acceptar",
@@ -171,6 +172,7 @@
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
     "browse": "Navegar",
+    "browser": "Navegador",
     "business-name": "Raó social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -221,7 +223,9 @@
     "category": "Categoría",
     "cc": "CC",
     "center": "Centre",
+    "certificate": "Certificat",
     "change": "Canviar",
+    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
     "charge-date": "Data de càrrec",
     "chart": "Gràfic",
@@ -539,6 +543,7 @@
     "end-date": "Data de fi",
     "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
+    "environment": "Entorno",
     "epigraph": "Grup contable",
     "epigraph-group": "Grup d'epìgraf",
     "epigraphs": "Grups",
@@ -554,11 +559,13 @@
     "error-no-name-in-settings": "Erro comprovant la vista %viewName%. No hi ha cap columna 'name' en el xml",
     "error-on-xml-file": "Erro en l'archiu %fileName%",
     "error-processing-xmlview": "Error en processar la vista XML, el fitxer '%fileName%' not existix o és incorrecte",
+    "error-read-cert": "Error al llegir el certificat",
     "error-reading-file": "Error en llegir el fitxer '%fileName%'",
     "error-saving-lines": "Erro en alçar les llínees",
     "error-saving-stock": "¡Erro a l'alçar l'estoc!",
     "error-to-innodb": "Erro al convertir la taula a InnoDB.",
     "error-updating-product-stock": "Error en actualitzar l'estoc del producte!",
+    "error-write-cert": "Error en escriure el certificat",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
@@ -778,6 +785,7 @@
     "infostate-component-title": "Informació de l'estat",
     "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
+    "installation": "Instalación",
     "installed": "Instalat",
     "installed-plugins": "Complements instalats",
     "installer": "Instal·lador de FacturaScripts 2018",
@@ -895,6 +903,7 @@
     "library": "Biblioteca",
     "license": "Llicència",
     "like-than": "Igual que",
+    "limits": "Límites",
     "line": "línia",
     "lines": "Línies",
     "linux": "Linux",
@@ -1032,6 +1041,7 @@
     "next": "Següent",
     "nick": "Sobrenom",
     "no": "No",
+    "no-admin": "No administrador",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
     "no-document-selected": "No s'ha seleccionat cap document",
@@ -1039,6 +1049,7 @@
     "no-gaps-found": "Cap buit trobat",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
+    "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sense referència",
     "no-selected-item": "No hi ha cap element seleccionat",
@@ -1053,6 +1064,7 @@
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
     "not-public": "No públic",
+    "not-registered": "No registrada",
     "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
@@ -1363,6 +1375,7 @@
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
+    "security-warning": "Aviso de seguridad",
     "select": "select",
     "select-all": "Seleccionar tot",
     "select-content-for": "Selecciona contingut per %content%",
@@ -1401,12 +1414,14 @@
     "serierb": "Sèrie RB",
     "series": "Séries",
     "server": "Servidor",
+    "server-software": "Software del servidor",
     "service": "Servici",
     "services": "Serveis",
     "settings": "Ajustes",
     "settlement": "Liquidació",
     "settlement-product": "Producte de liquidació",
     "settlements": "Liquidacions",
+    "setup-manually": "Configuración manual",
     "setup-options": "Opcions de configuració",
     "shipping": "Enviament",
     "shipping-address": "Direcció d'enviament",
@@ -1433,6 +1448,7 @@
     "smaller-than": "Més menut que",
     "soap-extension-not-installed": "La extensió SOAP no està activada en PHP. Contacta amb el teu proveïdor d'allotjament per activar-la.",
     "social-security-number": "Número de la Seguritat Social",
+    "software": "Programari",
     "sort": "Orde",
     "sort-by-column": "Ordenar per columna",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
@@ -1600,6 +1616,10 @@
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
     "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipo alerta",
@@ -1672,6 +1692,7 @@
     "vat-regularization": "Regularització de l'IVA",
     "vehicle": "Vehículo",
     "verified": "Verificat",
+    "verify": "Verificar",
     "version": "Versió",
     "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' està registrat en el sistema VIES",
